--- a/index.html
+++ b/index.html
@@ -116,51 +116,10 @@ s0.parentNode.insertBefore(s1,s0);
     <button class="weather-button" aria-label="Weather" onclick="window.location.href='weather.html'"></button>
 </div>
         
-       <!-- Social Links Section -->
-<div class="social-links-section">
+       <div class="social-links-section">
     <h2>Connect with Me</h2>
-    <div class="social-links-container">
-        <a href="https://www.tiktok.com/@bus.army.dude" class="social-button">
-            <i class="fab fa-tiktok social-icon"></i>
-            <span>TikTok</span>
-        </a>
-        <a href="https://www.snapchat.com/add/calebkritzar" class="social-button">
-            <i class="fab fa-snapchat-ghost social-icon"></i>
-            <span>Snapchat</span>
-        </a>
-        <a href="https://x.com/KritzarRiver" class="social-button">
-            <i class="fab fa-x-twitter social-icon"></i>
-            <span>X (Twitter)</span>
-        </a>
-        <a href="https://www.threads.net/@busarmydude" class="social-button">
-            <i class="fab fa-threads social-icon"></i>
-            <span>Threads</span>
-        </a>
-        <a href="https://m.twitch.tv/BusArmyDude" class="social-button">
-            <i class="fab fa-twitch social-icon"></i>
-            <span>Twitch</span>
-        </a>
-        <a href="https://www.facebook.com/profile.php?id=61569972389004" class="social-button">
-            <i class="fab fa-facebook social-icon"></i>
-            <span>Facebook</span>
-        </a>
-        <a href="https://steamcommunity.com/profiles/76561199283946668" class="social-button">
-            <i class="fab fa-steam social-icon"></i>
-            <span>Steam</span>
-        </a>
-        <a href="https://discord.gg/NjMtuZYc52" class="social-button">
-            <i class="fab fa-discord social-icon"></i>
-            <span>Discord</span>
-        </a>
-        <a href="https://www.instagram.com/busarmydude/" class="social-button">
-            <i class="fab fa-instagram social-icon"></i>
-            <span>Instagram</span>
-        </a>
-        <a href="https://music.amazon.com/profiles/@riverkritzar40820895?marketplaceId=ATVPDKIKX0DER&musicTerritory=US&ref=dm_sh_itT4WHDz0nPzPfGGi9YYP0iqI" class="social-button">
-            <i class="fa-brands fa-amazon social-icon"></i>
-            <span>Amazon Music</span>
-        </a>
-    </div>
+    <div class="social-links-container" id="social-links-container-main">
+        </div>
 </div>
 
         
